Fixes to spacing above filters on hotel details page

--- a/src/targets/meandall/styles/views/hotel-detail.less
+++ b/src/targets/meandall/styles/views/hotel-detail.less
@@ -70,9 +70,11 @@ hotel-detail {
       display:none;
     }
     .section-header {
-      padding-top: 40px;
-      margin-top:65px;
+      padding-top: 40px;    
       position: relative;
+      &.flexi-dates-displayed {
+        margin-top:65px;
+      }
       .viewport-mobile & {
         display: none;
       }
